--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website Saya</title>
+    <title>Website Devan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="top-container">
+    <div class="top-container title">
         <div class="dropdown" style="margin-right:20px; float:left;">
             <!-- <button class="dropbtn">MENU</button> -->
             <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
@@ -27,13 +27,13 @@
     <div class="container">
         <br>
         <!-- <font face="Open Sans Black" size="6" color="#002080"><b>BLOG DAN CERITA</b></font> -->
-        <font id="home" size="7" color="#146480"><b>Blog dan Cerita</b></font>
+        <div class="title" id="home" style="font-size:50px; color:#004080;"><b>Website Devan</b></div>
         <p style="font-size: 22px">
             Cerita dan pengalaman saya yang pernah dirasakan.<br>
             Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.<br>
             Inilah beberapa cerita yang ada di blog ini.
         </p>
-        <p style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
+        <p class="title" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
             <b>Link cerita:</b><br>
@@ -45,8 +45,8 @@
             </p>
         </div>
         <br>
-        <p style="font-size:30px; color:#206044;"><u><b>BEBERAPA CERITA</b></u></p>
-        <p id="1" style="font-size: 25px"><b>1. Holiday to Bromo</b></p>
+        <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA CERITA</b></u></p>
+        <p class="title" id="1" style="font-size: 25px"><b>1. Holiday to Bromo</b></p>
         <div class="container2">
             <p>
             Dengan tulisan bahasa Inggris
@@ -94,7 +94,7 @@
             </p>
 
         </div>
-        <p id="2" style="font-size: 25px"><b>2. About Me Devan - Descriptive Text</b></p>
+        <p class="title" id="2" style="font-size: 25px"><b>2. About Me Devan - Descriptive Text</b></p>
         <div class="container2">
             <p>
             Dengan tulisan bahasa Inggris
@@ -127,7 +127,7 @@
             </p>
             <br>
         </div>
-        <p id="3" style="font-size: 25px"><b>3. Memenangkan Lomba Besar</b></p>
+        <p class="title" id="3" style="font-size: 25px"><b>3. Memenangkan Lomba Besar</b></p>
         <div class="container2">
             <div class="image">
                 <img src="images/Sertifikat OSN.jpg" width="200">
@@ -143,33 +143,34 @@
             </p>
             <br>
         </div>
-        <p id="4" style="font-size: 25px"><b>4. Retreat Eagle School 2023</b></p>
+        <p class="title" id="4" style="font-size: 25px"><b>4. Retreat Eagle School 2023</b></p>
         <div class="container2">
             <p>
             <!-- <span style="font-size:22px; color:#000080;"><b>Kamis, 8 Sep 2023</b></span> -->
-            <b style="font-size:22px; color:#000080;">Kamis, 8 Sep 2023</b>
+            <b style="font-size:23px; color:#000080;">Kamis, 8 Sep 2023</b>
             <br><br>
             <!-- <b style="color:#200040">Berangkat ke Lembah Kemenangan</b><br> -->
             <b>Berangkat ke Lembah Kemenangan</b><br>
-            Lokasi: Lembah Kemenangan, Ungaran, Kab. Semarang<br><br>
+            Lokasi: <span style="color:darkcyan">Lembah Kemenangan, Ungaran, Kab. Semarang</span><br><br>
             Hari ini siswa SMA dan gurunya pergi dari sekolah naik bus, dengan membawa 2 tas yang berat, seperti tas buku dan Sekolah, lalu masukkan ke dalam bawah bus. Nanti akan ke Lembah Kemenang an melewati, Jalan Tol di Ungaran, makan siang. Ada 3 sesi hari ini.
             <br><br>
-            <b>SESI 1</b><br>
+            <!-- &#8226;&#9;&#9; -->
+            <b>SESI 1 ~ <span style="color:darkgreen">12:30-15:30</span></b><br>
             Pada sesi pertama pengenalan retreat yuaitu kelompok yel-yel dan kamar, dikumpulkan hp, dan juga ibadah bersama pendeta Michael. Setelah itu, nyari kamar tapi malah ke atas jadi bingung, akhirnya ada temannya yang bantuin ke kamar, dio dalamnya ada Gilbert, dan mandi dengan membawa peralatan mandi dan bawa baju ganti, juga belum terlalu terbiasa jadi agak bingung.
             <br><br>
-            <b>SESI 2</b><br>
+            <b>SESI 2 ~ <span style="color:darkgreen">16:30-18:30</span></b><br>
             Pada sesi kedua, kembali ke aula dikumpulkan hp lagi ke kotaknya, ada ibadah bersama pendeta Hengky, khotbah-nya marah-marah dan berdoanya kaut untuk menjauh dari dosa, setelah itu makan malam ada ayamnya, suasananya rame, dan melihat coach Ditus yang sedang berbicara sama Ps. Hengky.
             <br><br>
-            <b>SESI 3</b><br>
+            <b>SESI 3 ~ <span style="color:darkgreen">19:15-22:00</span></b><br>
             Pada sesi ketiga, ada ibadah bersama Sr. Ditus, tentang kekudusan, juga ada sesi tanya jawab (Q&A). Dan kegia5tan terakhir hari ini adalah latihan yel-yel dengan tema Be Excellent jam 10 malam, karena banyak siswa yang melanggar tata tertib, maka C. Gaby dan C. Agus S marah dan menegurnya, seperti membersihkan meja makan. Di malam hari akhirnya melihat penampilan kelompok yel-yel dekat api unggun karena abis latihan. Baru tidur di kamar Graha Gita sekiar tengah malam atau jam 12 malam, sempat main hp dan menunjukkan ke Gilbert.
             <br><br>
-            <span style="font-size:22px; color:#000080;"><b>Jumat, 9 Sep 2023</b></span>
+            <span style="font-size:23px; color:#000080;"><b>Jumat, 9 Sep 2023</b></span>
             <br><br>
             <b>SESI 4</b><br>
             </p>
             <br>
         </div>
-        <p id="5" style="font-size: 25px"><b>5. Holiday to Bali</b></p>
+        <p class="title" id="5" style="font-size: 25px"><b>5. Holiday to Bali</b></p>
         <div class="container2">
             <p>
             Dengan tulisan bahasa Inggris
@@ -179,13 +180,13 @@
             </p>
             <br>
         </div>
-        <p id="6" style="font-size: 25px"><b>6. Holiday to Jakarta & Bandung</b></p>
-        <p id="7" style="font-size: 25px"><b>7. Cerita tentang Talent</b></p>
-        <p id="8" style="font-size: 25px"><b>8. Masa depan dan impian</b></p>
-        <p id="9" style="font-size: 25px"><b>9. [Under Construction]</b></p>
+        <p class="title" id="6" style="font-size: 25px"><b>6. Holiday to Jakarta & Bandung</b></p>
+        <p class="title" id="7" style="font-size: 25px"><b>7. Cerita tentang Talent</b></p>
+        <p class="title" id="8" style="font-size: 25px"><b>8. Masa depan dan impian</b></p>
+        <p class="title" id="9" style="font-size: 25px"><b>9. [Under Construction]</b></p>
         <br>
-        <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box">
+        <p class="title" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box title">
             <p>
             Link halaman:<br>
             <a href="index.html">Home</a> |
@@ -193,15 +194,21 @@
             <a href="fakta.html">Fakta</a> |
             <a href="profil.html">Profil</a> |
             <a href="portofolio.html">Portofolio</a> |
-            <a href="about.html">About</a> |
-            Timeline (Coming Soon)
+            <a href="hasil-karya.html">Hasil Karya</a> |
+            <a href="timeline.html">Timeline</a> |
+            <a href="updates.html">Updates</a>
             </p>
         </div>
         <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
         <br>
-        <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 11 Sep 2023</p>
-        <br>
+        <a class="button title" href="#home">Kembali ke awal</a>
+        <br><br>
     </div>
+    <footer style="background-color:#404040; padding:10px; color:white;">
+        <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
+        Terakhir diupdate: 25 Sep 2023<br>
+        Copyright © 2023 by Devan
+        </p>
+    </footer>
 </body>
 </html>
