--- a/fakta.html
+++ b/fakta.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website Saya</title>
+    <title>Website Devan</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="top-container">
-        <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
+    <div class="top-container title">
+        <div class="dropdown" style="margin-right:20px; float:left;">
+            <!-- <button class="dropbtn">MENU</button> -->
+            <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
+            <div class="dropdown-content">
+                <a href="index.html">Home</a>
+                <a href="blog.html">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a href="portofolio.html">Portofolio</a>
+            </div>
+        </div>
+        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
+        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
+        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
+        <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
-        <font id="home" size="7" color="#146480"><b>Fakta dan Informasi</b></font>
+        <font class="title" id="home" size="7" color="#146480"><b>Fakta dan Informasi</b></font>
         <p>
         Fakta dan Informasi adalah halaman yang berisi fakta untuk informasi yang berguna untuk kedepannya. Seperti fakta, cerita, berita, dan pembahasan.
         </p>
-        <p style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
+        <p class="title" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
             1. <a href="#1">Bahasa Pemrograman</a><br>
@@ -25,8 +39,8 @@
             </p>
         </div>
         <br>
-        <p style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
-        <p id="1" style="font-size: 25px"><b>1. Bahasa Pemrograman</b></p>
+        <p class="title" style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
+        <p class="title" id="1" style="font-size: 25px"><b>1. Bahasa Pemrograman</b></p>
         <div class="container2">
             <img src="fakta/python.png" alt="Python" width="200">
             <img src="fakta/html.png" alt="HTML" width="200">
@@ -44,13 +58,13 @@
             <br>
         </div>
 
-        <p id="2" style="font-size: 25px"><b>2. Bahasa AI</b></p>
+        <p class="title" id="2" style="font-size: 25px"><b>2. Bahasa AI</b></p>
         <div class="container2">
             <img src="fakta/openai-logo.jpg" alt="OpenAI" width="200">
         </div>
         <br>
-        <p style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box">
+        <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box title">
             <p>
             Link halaman:<br>
             <a href="index.html">Home</a> |
@@ -63,9 +77,14 @@
             </p>
         </div>
         <br>
-        <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 26 Agustus 2023</p>
-        <br>
+        <a class="button title" href="#home">Kembali ke awal</a>
+        <br><br>
     </div>
+    <footer style="background-color:#404040; padding:10px; color:white;">
+        <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
+        Terakhir diupdate: 19 Sep 2023<br>
+        Copyright © 2023 by Devan
+        </p>
+    </footer>
 </body>
 </html>
