--- a/index.html
+++ b/index.html
@@ -39,21 +39,23 @@
         <br>
         Selain itu, ada 2 program yang saat ini Devan ingin kembangkan yaitu:<br>
         - Program Equation Solver versi 5<br>
-        - Program Geometri versi 1.6
+        - Program Geometri versi 1.6<br>
+        <br>
+        Dan juga sedang mengembangkan halaman timeline dan updates.
         </p>
         <p class="title" style="font-size:25px; color:#000080;">
             <b>Link program:</b>&nbsp;
             <img style="vertical-align:middle;" src="images/link.png" alt="Link icon" width="30">
         </p>
         <ul>
-            <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> - Version 1.4</li>
-            <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> - Version 1.2</li>
-            <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> - Version 1.1</li>
-            <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.5</li>
-            <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
-            <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
-            <li><a href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
-            <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
+            <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/" target="_blank">Equation Solver</a> - Version 1.4</li>
+            <li><a href="https://devandaniel9-number-type-detection.streamlit.app/" target="_blank">Number Type Detection</a> - Version 1.2</li>
+            <li><a href="https://devandaniel9-peluang.streamlit.app/" target="_blank">Program Peluang</a> - Version 1.1</li>
+            <li><a href="https://devandaniel9-geometry-3.streamlit.app/" target="_blank">Program Geometri</a> - Version 1.5</li>
+            <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/" target="_blank">Konversi Satuan</a> - Version 1.1</li>
+            <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/" target="_blank">Kalkulator Dari Teks</a> - Version 1.0</li>
+            <li><a href="https://devandaniel9-equation-solver3.streamlit.app/" target="_blank">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
+            <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/" target="_blank">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
         </ul><br>
         <!-- <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p> -->
         <!-- <p>Website baru: <b>Portofolio</b>, <b>Fakta dan Informasi</b>, dan <b>Blog dan Cerita</b></p> -->
@@ -206,8 +208,8 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 25 Sep 2023<br>
-        Version: 1.7<br>
+        Terakhir diupdate: 26 Sep 2023<br>
+        Version: 1.7.1<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
