--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 
         <hr style="height:2px; border-width:0; background-color:gray">
 
-        <p>Beberapa informasi dan deskripsi dalam masing-masing halaman</p>
         <p class="title" style="font-size:25px; color:#300080;">
             <b>Informasi halaman</b>&nbsp;
             <img style="vertical-align:middle;" src="images/page.png" alt="Page icon" width="30">
         </p>
+        <p>Beberapa informasi dan deskripsi dalam masing-masing halaman</p>
         <!-- <p>
             Hitam: Sudah ada<br>
             Maroon: <span style="color:maroon;">Belum ada</span>
@@ -126,7 +126,7 @@
             </tr>
             <tr>
                 <td>Profil</td>
-                <td>Berisi profil dan about me, tentang biografis dan kesukaannya.</td>
+                <td>Berisi profil dan about me, tentang biografis dan kesukaannya. Terdapat juga daftar teman dan orang.</td>
             </tr>
             <tr>
                 <td>Portofolio</td>
@@ -136,6 +136,14 @@
             <tr>
                 <td>Hasil Karya</td>
                 <td>Berisi hasil karya yang sudah pernah buat dari sekolah</td>
+            </tr>
+            <tr>
+                <td>Timeline - <span style="color:maroon">v1.7</span></td>
+                <td>Berisi timeline dan juga sejarah, terdapat pengembangan website, program, dan karakter dari awal sampai akhir.</td>
+            </tr>
+            <tr>
+                <td>Updates - <span style="color:maroon">v1.7</span></td>
+                <td>Berisi update-update yang terbaru hingga terlama di website ini.</td>
             </tr>
         </table>
         <br>
@@ -148,14 +156,6 @@
             <tr>
                 <th style="width:400px;">Nama Halaman</th>
                 <th style="width:400px;">Informasi Halaman</th>
-            </tr>
-            <tr>
-                <td>Timeline - <span style="color:maroon">v1.7</span></td>
-                <td>Berisi timeline dan juga sejarah, terdapat pengembangan website, program, dan karakter dari awal sampai akhir.</td>
-            </tr>
-            <tr>
-                <td>Updates - <span style="color:maroon">v1.7</span></td>
-                <td>Berisi update-update yang terbaru hingga terlama di website ini.</td>
             </tr>
             <tr>
                 <td>Projects - <span style="color:maroon">v1.7.2</span></td>
@@ -177,11 +177,9 @@
         <hr style="height:2px; border-width:0; background-color:gray">
         <p class="title" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box title">
-            <p>
-            <u>Link halaman:</u><br>
-            <!-- <b>Home</b> -->
-            <!-- <a class="button" href="blog.html">Blog</a> | -->
-            <b>Home</b> |
+            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
+            <!--
+            <div class="btn-group">
             <a href="blog.html">Blog</a> |
             <a href="fakta.html">Fakta</a> |
             <a href="profil.html">Profil</a> |
@@ -189,16 +187,19 @@
             <a href="hasil-karya.html">Hasil Karya</a> |
             <a href="timeline.html">Timeline</a> |
             <a href="updates.html">Updates</a>
-            </p>
-            <p style="color:navy;">
-            <u>Coming soon:</u><br>
-            Projects | Pertanyaan | Guide | Website lainnya
-            </p>
-            <p style="color:maroon;">
-            <u>Yang mau di delete:</u><br>
-            <a href="about.html">About</a>
-            <!-- <iframe src="text.txt"></iframe> -->
-            </p>
+            </div>
+            -->
+            <div class="btn-group">
+                <a class="selected">Home</a>
+                <a href="blog.html">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a href="portofolio.html">Portofolio</a>
+                <a href="hasil-karya.html">Hasil Karya</a>
+                <a href="timeline.html">Timeline</a>
+                <a href="updates.html">Updates</a>
+            </div>
+            <div class="clearfix"></div><br>
         </div>
         <br>
         <!-- <a href="#home">Kembali ke awal</a> -->
@@ -208,7 +209,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 26 Sep 2023<br>
+        Terakhir diupdate: 1 Okt 2023<br>
         Version: 1.7.1<br>
         Copyright © 2023 by Devan
         </p>
