--- a/updates.html
+++ b/updates.html
@@ -95,17 +95,18 @@
 
         <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box title">
-            <p>
-            Link halaman:<br>
-            <a href="index.html">Home</a> |
-            <a href="blog.html">Blog</a> |
-            <a href="fakta.html">Fakta</a> |
-            <a href="profil.html">Profil</a> |
-            <a href="portofolio.html">Portofolio</a> |
-            <a href="hasil-karya.html">Hasil Karya</a> |
-            <a href="timeline.html">TImeline</a> |
-            <b>Updates</b>
-            </p>
+            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
+            <div class="btn-group">
+                <a href="index.html">Home</a>
+                <a href="blog.html">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a href="portofolio.html">Portofolio</a>
+                <a href="hasil-karya.html">Hasil Karya</a>
+                <a href="timeline.html">Timeline</a>
+                <a class="selected">Updates</a>
+            </div>
+            <div class="clearfix"></div><br>
         </div>
         <br>
         <a class="button title" href="#home">Kembali ke awal</a>
@@ -113,7 +114,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 25 Sep 2023<br>
+        Terakhir diupdate: 1 Okt 2023<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
