--- a/blog.html
+++ b/blog.html
@@ -156,17 +156,21 @@
             <br><br>
             <!-- &#8226;&#9;&#9; -->
             <b>SESI 1 ~ <span style="color:darkgreen">12:30-15:30</span></b><br>
-            Pada sesi pertama pengenalan retreat yuaitu kelompok yel-yel dan kamar, dikumpulkan hp, dan juga ibadah bersama pendeta Michael. Setelah itu, nyari kamar tapi malah ke atas jadi bingung, akhirnya ada temannya yang bantuin ke kamar, dio dalamnya ada Gilbert, dan mandi dengan membawa peralatan mandi dan bawa baju ganti, juga belum terlalu terbiasa jadi agak bingung.
+            Pada sesi pertama pengenalan retreat yaitu kelompok yel-yel dan kamar, dikumpulkan hp, dan juga ibadah bersama pendeta Michael. Setelah itu, nyari kamar tapi malah ke atas jadi bingung, akhirnya ada temannya yang bantuin ke kamar, dio dalamnya ada Gilbert, dan mandi dengan membawa peralatan mandi dan bawa baju ganti, juga belum terlalu terbiasa jadi agak bingung.
             <br><br>
             <b>SESI 2 ~ <span style="color:darkgreen">16:30-18:30</span></b><br>
             Pada sesi kedua, kembali ke aula dikumpulkan hp lagi ke kotaknya, ada ibadah bersama pendeta Hengky, khotbah-nya marah-marah dan berdoanya kaut untuk menjauh dari dosa, setelah itu makan malam ada ayamnya, suasananya rame, dan melihat coach Ditus yang sedang berbicara sama Ps. Hengky.
             <br><br>
             <b>SESI 3 ~ <span style="color:darkgreen">19:15-22:00</span></b><br>
-            Pada sesi ketiga, ada ibadah bersama Sr. Ditus, tentang kekudusan, juga ada sesi tanya jawab (Q&A). Dan kegia5tan terakhir hari ini adalah latihan yel-yel dengan tema Be Excellent jam 10 malam, karena banyak siswa yang melanggar tata tertib, maka C. Gaby dan C. Agus S marah dan menegurnya, seperti membersihkan meja makan. Di malam hari akhirnya melihat penampilan kelompok yel-yel dekat api unggun karena abis latihan. Baru tidur di kamar Graha Gita sekiar tengah malam atau jam 12 malam, sempat main hp dan menunjukkan ke Gilbert.
+            Pada sesi ketiga, ada ibadah bersama Sr. Ditus, tentang kekudusan, juga ada sesi tanya jawab (Q&A). Dan kegiatan terakhir hari ini adalah latihan yel-yel dengan tema Be Excellent jam 10 malam, karena banyak siswa yang melanggar tata tertib, maka C. Gaby dan C. Agus S marah dan menegurnya, seperti membersihkan meja makan. Di malam hari akhirnya melihat penampilan kelompok yel-yel dekat api unggun karena abis latihan. Baru tidur di kamar Graha Gita sekiar tengah malam atau jam 12 malam, sempat main hp dan menunjukkan ke Gilbert.
             <br><br>
             <span style="font-size:23px; color:#000080;"><b>Jumat, 9 Sep 2023</b></span>
             <br><br>
-            <b>SESI 4</b><br>
+            <b>Kegiatan Outbound</b><br>
+            Di pagi hari yaitu jam setengah 6 pagi (05:30), kita akan pergi ke ruang aula untuk beribadah, dan lalu sarapan. Habis itu, ada beberapa kegiatan outbound yang menarik, sama Daniel T pada kelompok yel-yel yang sama. Yang pertama bermain bola dan pipa, agar pipa ga bocor, maka dipegang. Selanjutnya, memasukkan bola ke dalam lubangnya, dengan pegangan orang-orang dari kelompok, dan ada permainan melompat di lingkaran.
+            <br><br>
+            <b>Kegiatan Terakhir saat Retreat</b><br>
+            Setelah itu, baru mandi dan sarapan makan nasi goreng. Baru melihat pengumuman dari hasil kegiatan permainan outbound dengan banyak hadiah sebelum pulang. Lalu pulangnya naik bis dan kembali ke sekolah Eagle School.
             </p>
             <br>
         </div>
@@ -187,17 +191,18 @@
         <br>
         <p class="title" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box title">
-            <p>
-            Link halaman:<br>
-            <a href="index.html">Home</a> |
-            <b>Blog</b> |
-            <a href="fakta.html">Fakta</a> |
-            <a href="profil.html">Profil</a> |
-            <a href="portofolio.html">Portofolio</a> |
-            <a href="hasil-karya.html">Hasil Karya</a> |
-            <a href="timeline.html">Timeline</a> |
-            <a href="updates.html">Updates</a>
-            </p>
+            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
+            <div class="btn-group">
+                <a href="index.html">Home</a>
+                <a class="selected">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a href="portofolio.html">Portofolio</a>
+                <a href="hasil-karya.html">Hasil Karya</a>
+                <a href="timeline.html">Timeline</a>
+                <a hred="updates.html">Updates</a>
+            </div>
+            <div class="clearfix"></div><br>
         </div>
         <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
         <br>
@@ -206,7 +211,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 25 Sep 2023<br>
+        Terakhir diupdate: 3 Okt 2023<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
